Fixed styling overflow User Details

--- a/src/App.css
+++ b/src/App.css
@@ -296,8 +296,8 @@ p {
   cursor: pointer;
   width: 100%;
   height: 25vh;
-  object-fit: cover;
   background-image: url("https://images.pexels.com/photos/1000366/pexels-photo-1000366.jpeg?cs=srgb&dl=pexels-steve-johnson-1000366.jpg&fm=jpg");
+  background-size: cover;
 }
 
 .profileImageDiv {
@@ -809,5 +809,4 @@ p {
 .hoverGreyBg:hover {
   cursor: pointer;
   background-color: rgb(237, 237, 237) !important;
-
 }
